src/test/deca/codegen/invalid/class-champs/field_class_member_no_init.res
Erreur : déréférencement d'un pointer `null`
